Was able to load the info from the database

--- a/templates/appointments.html
+++ b/templates/appointments.html
@@ -58,7 +58,17 @@
                     <th>Reason for Visit</th>
                 </tr>
             </thead>
-            <tbody id="appointmentsTableBody"></tbody>
+            <tbody id="appointmentsTableBody">
+                {% for appt in appointments %}  
+                <tr>
+                    <td>{{appt.patient }}</td>
+                    <td>{{appt.date }}</td>
+                    <td>{{appt.time }}</td>
+                    <td>{{appt.doctor }}</td>
+                    <td>{{appt.reason }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
         </table>
     </div>
 
