doctor dashboard html opens

--- a/templates/appointments.html
+++ b/templates/appointments.html
@@ -13,6 +13,7 @@
             <a href="/login">Login</a>
             <a href="/appointments">Book Appointment</a>
             <a href="/patients">Patient Dashbaord</a>
+            <a href="/doctors">Doctor Dashbaord</a>
         </nav>
     </header>
     <div class="container">
