--- a/templates/doctors.html
+++ b/templates/doctors.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Health Scheduler</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <title>Book Appointment</title>
 </head>
 <body>
     <header>
         <h1>NY Health Scheduler</h1>
         <nav>
-            <a href="login.html">Login</a>
-            <a href="appointments.html">Book Appointment</a>
-            <a href="patients.html">Patient Dashbaord</a>
-            <a href="doctors.html">Patient Dashbaord</a>
+            <a href="/login">Login</a>
+            <a href="/appointments">Book Appointment</a>
+            <a href="/patients">Patient Dashbaord</a>
+            <a href="/doctors">Doctor Dashbaord</a>
         </nav>
     </header>
     <main>
