--- a/templates/doctors.html
+++ b/templates/doctors.html
@@ -19,39 +19,39 @@
     <main>
         <h2>Doctor</h2>
         <div class="grid-container">
-            <img src="doctorimage/doc1.png" class="grid-item" height="100" width="100">
+            <img src="{{ url_for('static', filename='images/doc1.png') }}" class="grid-item" height="100" width="100">
             <div class="grid-item"> 
                 <h4> John Smith <br> Neurologist </h4>
             </div>
-            <img src="doctorimage/doc2.png" class="grid-item" height="100" width="100">
+            <img src="{{ url_for('static', filename='images/doc2.png') }}" class="grid-item" height="100" width="100">
             <div class="grid-item"> 
                 <h4> Andre Cole <br> General Practitioner </h4>
             </div>
-            <img src="doctorimage/doc6.png" class="grid-item" height="100" width="100">
+            <img src="{{ url_for('static', filename='images/doc6.png') }}" class="grid-item" height="100" width="100">
             <div class="grid-item"> 
                 <h4> Paulette Weber <br> General Practitioner </h4>
             </div>
-            <img src="doctorimage/doc3.jpg" class="grid-item" height="100" width="100">
+            <img src="{{ url_for('static', filename='images/doc3.jpg') }}" class="grid-item" height="100" width="100">
             <div class="grid-item"> 
                 <h4> Earl Devine <br> Oncologist </h4>
             </div>
-            <img src="doctorimage/doc4.jpg" class="grid-item" height="100" width="100">
+            <img src="{{ url_for('static', filename='images/doc4.jpg') }}" class="grid-item" height="100" width="100">
             <div class="grid-item"> 
                 <h4> Andrian Simons <br> General Cardiologist </h4>
             </div>
-            <img src="doctorimage/doc7.png" class="grid-item" height="100" width="100">
+            <img src="{{ url_for('static', filename='images/doc7.png') }}" class="grid-item" height="100" width="100">
             <div class="grid-item"> 
                 <h4> Maria Fowler<br> Cardiologist </h4>
             </div>
-            <img src="doctorimage/doc8.png" class="grid-item" height="100" width="100">
+            <img src="{{ url_for('static', filename='images/doc8.png') }}" class="grid-item" height="100" width="100">
             <div class="grid-item"> 
                 <h4> Nancy McDonald <br> Dermatologist </h4>
             </div>
-            <img src="doctorimage/doc5.jpg" class="grid-item" height="100" width="100">
+            <img src="{{ url_for('static', filename='images/doc5.jpg') }}" class="grid-item" height="100" width="100">
             <div class="grid-item"> 
                 <h4> Steve Kim <br> Psychiatrist </h4>
             </div>
-            <img src="doctorimage/doc9.jpg" class="grid-item" height="100" width="100">
+            <img src="{{ url_for('static', filename='images/doc9.jpg') }}" class="grid-item" height="100" width="100">
             <div class="grid-item"> 
                 <h4> Taylor Hensly <br> Pediatrician </h4>
             </div>
