--- a/templates/doctors.html
+++ b/templates/doctors.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-        <h2>Doctor</h2>
+        <h2 id="title">Doctor</h2>
         <div class="grid-container">
             {% set doctors = [
                 {"name": "John Smith", "title": "Neurologist", "img": "doc1.png"},
